--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "Walmart-Sales-Forecasting"]
 	path = Walmart-Sales-Forecasting
 	url = https://github.com/barbyarik/Walmart-Sales-Forecasting.git
+[submodule "Airy-solution-PINN"]
+	path = Airy-solution-PINN
+	url = https://github.com/barbyarik/Airy-solution-PINN.git
